style: ensure that content does not overflow

--- a/src/components/task.module.css
+++ b/src/components/task.module.css
@@ -16,6 +16,7 @@
   flex: 1;
   justify-content: flex-start;
   color: var(--gray-100);
+  word-break: break-word;
 }
 
 .checked {
